--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,3 +27,19 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: exploreWithMe
+  main_service:
+    build:
+      context: ./main_service
+      dockerfile: ./Dockerfile
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+    environment:
+      SERVER_PORT: 8080
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/exploreWithMe
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
+      SPRING_JPA_DATABASE: postgresql
+      SPRING_DATASOURCE_UNDERCLASSMEN: org.postgresql.Driver
