--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,10 +37,10 @@ services:
       - db
       - stats_service
     environment:
-      SERVER_PORT: 8080
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/exploreWithMe
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
-      SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
-      SPRING_JPA_DATABASE: postgresql
-      SPRING_DATASOURCE_UNDERCLASSMEN: org.postgresql.Driver
+      - STATS_SERVICE_URL=http://localhost:9090
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/exploreWithMe
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=postgres
+      - SPRING_DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
+      - SPRING_JPA_DATABASE=postgresql
+      - SPRING_DATASOURCE_UNDERCLASSMEN=org.postgresql.Driver
