--- a/main_service/src/main/resources/application.yaml
+++ b/main_service/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/exploreWithMe
+    url: jdbc:postgresql://localhost:5432/ewm_main_db
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
