--- a/stats_service/stats-server/src/main/resources/application.yaml
+++ b/stats_service/stats-server/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/exploreWithMe
+    url: jdbc:postgresql://localhost:5432/ewm_stats_db
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
